--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/bf8e99400a.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="icon" type="image/png" href="./img/icons/tools-kitchen.svg">
 	<title>Restaurant</title>
 </head>
 <body>
@@ -12,8 +13,8 @@
 	 <header class="header">
 		<div class="header_logo"><h3>Grill</h3></div>
 		<ul class="header_menu">
-			<li class="list_items"><a href="#one">Our History</a></li>
-			<li class="list_items"><a href="#three">Food Gallery</a></li>
+			<li class="list_items"><a href="#one">Nuestra Historia</a></li>
+			<li class="list_items"><a href="#three">Galleria De Comida</a></li>
 			<li class="list_items"><a href="#">Como llegar</a></li> 
 			<div class="icon_caret">
 				<img class="btn show" src="./img/icons/caret-right-filled.svg" alt="">
@@ -33,7 +34,7 @@
 					</span>
 					<div class="info">
 						<h2>Direccion</h2>
-						<p>AVENIDA TU HERMANA</p>
+						<p>Calle falsa 123</p>
 					</div>
 				</div>
 				<div class="box_info">
@@ -58,16 +59,24 @@
 
 			<div class="icons_redes">
 				<span class="icon">
-					<img src="./img/icons/brand-facebook-filled.svg" alt="facebook">
+					<a href="#">
+						<img src="./img/icons/brand-facebook-filled.svg" alt="facebook">
+					</a>
 				</span>
 				<span class="icon">
-					<img src="./img/icons/brand-instagram.svg" alt="instagram">
+					<a href="#">
+						<img src="./img/icons/brand-instagram.svg" alt="instagram">
+					</a>
 				</span>
 				<span class="icon">
-					<img src="./img/icons/brand-linkedin.svg" alt="linkedin">
+					<a href="#">
+						<img src="./img/icons/brand-linkedin.svg" alt="linkedin">
+					</a>
 				</span>
 				<span class="icon">
-					<img src="./img/icons/brand-x.svg" alt="twitter/X">
+					<a href="#">
+						<img src="./img/icons/brand-x.svg" alt="twitter/X">
+					</a>
 				</span>
 			</div>
 		</div>
